# Gym

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  submission.csv  vscode.env
.devcontainer/: devcontainer.json
projects/: Transformer_UJ.ipynb  transformer.ipynb
pytorch/: 05_pytorch_going_modular_cell_mode.ipynb  CNN_computer_vision.ipynb  custom_datasets.ipynb  experiment_tracking.ipynb  fundamentals.ipynb  neural_network_classification.ipynb  paper_replication.ipynb  paper_replication_app.py  transfer_learning.ipynb
pytorch/.ipynb_checkpoints/: CNN_computer_vision-checkpoint.ipynb  custom_datasets-checkpoint.ipynb  neural_network_classification-checkpoint.ipynb  workflow-checkpoint.ipynb
pytorch/going_modular/: data_setup.py
pytorch/going_modular/.ipynb_checkpoints/: data_setup-checkpoint.py
